// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`focusBlur 1`] = `
<label
  class="seu-checkbox"
  role="checkbox"
>
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__label"
  >
    label4
  </span>
</label>
`;

exports[`focusBlur 2`] = `
<label
  class="seu-checkbox"
  role="checkbox"
>
  <span
    class="seu-checkbox__input is-focus"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__label"
  >
    label4
  </span>
</label>
`;

exports[`focusBlur 3`] = `
<label
  class="seu-checkbox"
  role="checkbox"
>
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__label"
  >
    label4
  </span>
</label>
`;
